Cookie Logic eingefügt Anpassung Validation und Exception Handling