@@ -1,15 +1,12 @@
 package at.fhv.Event.infrastructure.mapper;
 
-import at.fhv.Event.domain.model.booking.*;
-import at.fhv.Event.infrastructure.persistence.booking.*;
+import at.fhv.Event.domain.model.booking.Booking;
+import at.fhv.Event.domain.model.booking.BookingEquipment;
+import at.fhv.Event.domain.model.booking.BookingParticipant;
+import at.fhv.Event.infrastructure.persistence.booking.BookingEntity;
+import at.fhv.Event.infrastructure.persistence.booking.BookingEquipmentEntity;
+import at.fhv.Event.infrastructure.persistence.booking.BookingParticipantEntity;
 import org.springframework.stereotype.Component;
-
-import java.util.HashSet;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
-
 @Component
 public class BookingMapper {
     public BookingEntity toEntity(Booking domain) {
@@ -33,121 +30,94 @@ public class BookingMapper {
         entity.setCreatedAt(domain.getCreatedAt() != null ? domain.getCreatedAt() : java.time.Instant.now());
         entity.setBillingReady(domain.isBillingReady());
 
+        entity.getParticipants().clear();
         if (domain.getParticipants() != null) {
-            var participantEntities = domain.getParticipants().stream()
-                    .map(p -> toParticipantEntity(p, entity))
-                    .collect(Collectors.toCollection(HashSet::new));
-
-            entity.setParticipants(participantEntities);
+            for (BookingParticipant p : domain.getParticipants()) {
+                BookingParticipantEntity pe = new BookingParticipantEntity();
+                pe.setFirstName(p.getFirstName());
+                pe.setLastName(p.getLastName());
+                pe.setAge(p.getAge());
+                pe.setCheckInStatus(p.getCheckInStatus());
+                pe.setCheckOutStatus(p.getCheckOutStatus());
+                pe.setBooking(entity);
+                entity.getParticipants().add(pe);
+            }
         }
 
+        entity.getEquipment().clear();
         if (domain.getEquipment() != null) {
-            var equipmentEntities = domain.getEquipment().stream()
-                    .map(eq -> toEquipmentEntity(eq, entity))
-                    .collect(Collectors.toCollection(HashSet::new));
-
-            entity.setEquipment(equipmentEntities);
+            for (BookingEquipment eq : domain.getEquipment()) {
+                BookingEquipmentEntity ee = new BookingEquipmentEntity();
+                ee.setEquipmentId(eq.getEquipmentId());
+                ee.setQuantity(eq.getQuantity());
+                ee.setPricePerUnit(eq.getPricePerUnit());
+                ee.setInvoiced(eq.isInvoiced());
+                ee.setBooking(entity);
+                entity.getEquipment().add(ee);
+            }
         }
-        return entity;
-    }
-
-    private BookingParticipantEntity toParticipantEntity(BookingParticipant p, BookingEntity booking) {
-        BookingParticipantEntity entity = new BookingParticipantEntity();
-
-        entity.setFirstName(p.getFirstName());
-        entity.setLastName(p.getLastName());
-        entity.setAge(p.getAge());
-        entity.setBooking(booking);
-        entity.setCheckInStatus(p.getCheckInStatus());
-
-        return entity;
-    }
-
-    private BookingEquipmentEntity toEquipmentEntity(BookingEquipment eq, BookingEntity booking) {
-        BookingEquipmentEntity entity = new BookingEquipmentEntity();
-
-        entity.setId(eq.getId());
-        entity.setEquipmentId(eq.getEquipmentId());
-        entity.setQuantity(eq.getQuantity());
-        entity.setUnitPrice(eq.getUnitPrice());
-        entity.setTotalPrice(eq.getTotalPrice());
-        entity.setBooking(booking);
-
         return entity;
     }
 
     public Booking toDomain(BookingEntity entity) {
-        Booking domain = new Booking(
-                entity.getEventId(),
-                entity.getBookerFirstName(),
-                entity.getBookerLastName(),
-                entity.getBookerEmail(),
-                entity.getSeats(),
-                entity.getAudience(),
-                entity.getStatus(),
-                entity.getPaymentStatus(),
-                entity.getPaymentMethod(),
-                entity.getVoucherCode(),
-                entity.getDiscountAmount() == null ? 0.0 : entity.getDiscountAmount(),
-                entity.getTotalPrice(),
-                entity.getSpecialNotes(),
-                null,
-                null
-        );
+        Booking domain = new Booking();
 
         domain.setId(entity.getId());
-        domain.setCreatedAt(entity.getCreatedAt());
+        domain.setEventId(entity.getEventId());
+        domain.setBookerFirstName(entity.getBookerFirstName());
+        domain.setBookerLastName(entity.getBookerLastName());
+        domain.setBookerEmail(entity.getBookerEmail());
+        domain.setSeats(entity.getSeats());
+        domain.setAudience(entity.getAudience());
+        domain.setStatus(entity.getStatus());
+        domain.setPaymentStatus(entity.getPaymentStatus());
+        domain.setPaymentMethod(entity.getPaymentMethod());
+        domain.setVoucherCode(entity.getVoucherCode());
+        domain.setDiscountAmount(entity.getDiscountAmount() == null ? 0.0 : entity.getDiscountAmount());
+        domain.setTotalPrice(entity.getTotalPrice());
         domain.setPaidAmount(entity.getPaidAmount() == null ? 0.0 : entity.getPaidAmount());
+        domain.setSpecialNotes(entity.getSpecialNotes());
+        domain.setCreatedAt(entity.getCreatedAt());
         domain.setBillingReady(entity.isBillingReady());
 
-
         if (entity.getParticipants() != null) {
-            var domainParticipants = entity.getParticipants().stream()
-                    .map(this::toParticipantDomain)
-                    .collect(Collectors.toList());
-
-            domain.setParticipants(domainParticipants);
+            domain.setParticipants(
+                    entity.getParticipants().stream()
+                            .map(e -> new BookingParticipant(
+                                    e.getId(),
+                                    entity.getId(),
+                                    e.getFirstName(),
+                                    e.getLastName(),
+                                    e.getAge(),
+                                    e.getCheckInStatus(),
+                                    e.getCheckOutStatus(),
+                                    e.getCheckOutTime()
+                            ))
+                            .toList()
+            );
         }
 
         if (entity.getEquipment() != null) {
-            var domainEquipment = entity.getEquipment().stream()
-                    .map(this::toEquipmentDomain)
-                    .collect(Collectors.toList());
-
-            domain.setEquipment(domainEquipment);
+            domain.setEquipment(
+                    entity.getEquipment().stream()
+                            .map(e -> new BookingEquipment(
+                                    entity.getId(),
+                                    e.getEquipmentId(),
+                                    e.getQuantity(),
+                                    e.getPricePerUnit()
+                            ))
+                            .toList()
+            );
         }
 
-        return domain;
-    }
-
-    private BookingParticipant toParticipantDomain(BookingParticipantEntity e) {
-        BookingParticipant domain = new BookingParticipant(
-                e.getId(),
-                e.getFirstName(),
-                e.getLastName(),
-                e.getAge(),
-                e.getCheckInStatus(),
-                e.getCheckOutStatus()
-        );
-
-        return domain;
-    }
-
-
-
-    private BookingEquipment toEquipmentDomain(BookingEquipmentEntity e) {
-        BookingEquipment domain = new BookingEquipment(
-                e.getEquipmentId(),
-                e.getQuantity(),
-                e.getUnitPrice()
-        );
-        domain.setId(e.getId());
-        domain.setTotalPrice(e.getTotalPrice());
         return domain;
     }
 
     public void updateEntity(BookingEntity entity, Booking domain) {
-
+        entity.setEventId(domain.getEventId());
+        entity.setBookerFirstName(domain.getBookerFirstName());
+        entity.setBookerLastName(domain.getBookerLastName());
+        entity.setBookerEmail(domain.getBookerEmail());
         entity.setSeats(domain.getSeats());
         entity.setAudience(domain.getAudience());
         entity.setStatus(domain.getStatus());
@@ -156,52 +126,36 @@ public class BookingMapper {
         entity.setVoucherCode(domain.getVoucherCode());
         entity.setDiscountAmount(domain.getDiscountAmount());
         entity.setTotalPrice(domain.getTotalPrice());
+        entity.setPaidAmount(domain.getPaidAmount());
         entity.setSpecialNotes(domain.getSpecialNotes());
         entity.setBillingReady(domain.isBillingReady());
 
         entity.getParticipants().clear();
         if (domain.getParticipants() != null) {
-            domain.getParticipants().forEach(p -> {
+            for (BookingParticipant p : domain.getParticipants()) {
                 BookingParticipantEntity pe = new BookingParticipantEntity();
                 pe.setFirstName(p.getFirstName());
                 pe.setLastName(p.getLastName());
                 pe.setAge(p.getAge());
                 pe.setCheckInStatus(p.getCheckInStatus());
+                pe.setCheckOutStatus(p.getCheckOutStatus());
                 pe.setBooking(entity);
                 entity.getParticipants().add(pe);
-            });
-        }
-
-        Map<Long, BookingEquipmentEntity> existingEquipment =
-                entity.getEquipment().stream()
-                        .collect(Collectors.toMap(
-                                BookingEquipmentEntity::getEquipmentId,
-                                e -> e
-                        ));
-
-        List<BookingEquipmentEntity> updatedEquipment = new ArrayList<>();
-
-        if (domain.getEquipment() != null) {
-            for (BookingEquipment eq : domain.getEquipment()) {
-                BookingEquipmentEntity ee = existingEquipment.remove(eq.getEquipmentId());
-
-                if (ee == null) {
-                    ee = new BookingEquipmentEntity();
-                    ee.setEquipmentId(eq.getEquipmentId());
-                    ee.setBooking(entity);
-                }
-
-                ee.setQuantity(eq.getQuantity());
-                ee.setUnitPrice(eq.getUnitPrice());
-                ee.setTotalPrice(eq.getTotalPrice());
-
-                updatedEquipment.add(ee);
             }
         }
 
         entity.getEquipment().clear();
-        entity.getEquipment().addAll(updatedEquipment);
+        if (domain.getEquipment() != null) {
+            for (BookingEquipment eq : domain.getEquipment()) {
+                BookingEquipmentEntity ee = new BookingEquipmentEntity();
+                ee.setEquipmentId(eq.getEquipmentId());
+                ee.setQuantity(eq.getQuantity());
+                ee.setPricePerUnit(eq.getPricePerUnit());
+                ee.setInvoiced(eq.isInvoiced());
+                ee.setBooking(entity);
+                entity.getEquipment().add(ee);
+            }
+        }
     }
-
 
 }
